# sts-1

./: .gitignore  Pipfile  athlete.py  auth.py  config.py  graph.py  index.py  ingest_strava.py  package-lock.json  package.json  peaks.json  process_activity.py  process_streams.py  pyproject.toml  pyrightconfig.json  pytest.ini  serverless.yml
functions/: auth.py  graph.py  index.py  ingest_strava.py  process_activity.py  process_streams.py
lib/: activity_peak.py  config.py  recent_athlete_peak.py  strava_activity.py  strava_athlete.py  strava_enqueue.py
src/stubs/: serverless.py
templates/: _template.html  graph.html  index.html  logout.html  main.html  strava_auth.html  strava_callback.html
test/: graph_test.py
test/mocks/: dynamo.py
